force-app/main/default/objects/ARF_ASI__c/ARF_ASI__c.object-meta.xml
<CustomObject>
    <label>ARF-ASI</label>
    <nameField>
        <displayFormat>A{0}</displayFormat>
        <label>ARF-ASI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARFs-ASI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>