force-app/main/default/objects/ARF_ASI__c/fields/Ink_Color_s__c.field-meta.xml
<CustomField>
    <fullName>Ink_Color_s__c</fullName>
    <label>Ink Color(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>