force-app/main/default/objects/ARF_ASI__c/fields/My_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Order</label>
    <referenceTo>portal_my_order__c</referenceTo>
    <relationshipLabel>ARFs-ASI</relationshipLabel>
    <relationshipName>ARFs_ASI</relationshipName>
    <type>Lookup</type>
</CustomField>