force-app/main/default/objects/ARF_ASI__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ARFs-ASI</relationshipLabel>
    <relationshipName>ARFs_ASI</relationshipName>
    <type>Lookup</type>
</CustomField>