force-app/main/default/objects/ARF_ASI__c/fields/Product_Color__c.field-meta.xml
<CustomField>
    <fullName>Product_Color__c</fullName>
    <label>Product Color</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>