force-app/main/default/objects/ARF_ASI__c/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <label>Product Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>